[package]
name = "vm-master"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter"]

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
axum = { version = "0.7.7", features = ["macros"] }
sqlx = { version = "0.8.2", features = [
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate",
] }
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"

[dependencies]
adapter.workspace = true
api.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
